# Gaia

./: .gitignore  README.md  collection_to_text.py  config.toml  output.py  patch_notes.md  pyproject.toml
prototyping/: combat.py  oop_combat.py  terrain.jl  types_example.py
prototyping/simple/: Dockerfile  simple.py
src/: ability_action.py  app.py  combat_action.py  data_storage_var.py  game_data.py  main.py  user.py
src/combat_management/: __init__.py  active_effect.py  combat_manager.py  effect_manager.py  fighting_enemy_decision_maker.py
src/custom_tkinter/: __init__.py  dynamic_button.py  toggleable_button.py  weapon_interface.py
src/data_structures/: __init__.py  action_type.py  entity_type.py  fighting_enemy_graph.py  matrix.py  queue.py  stack.py
src/database/: __init__.py  condition.py  config_data.py  database.py  database_main_data.py  file_handler.py  table.py
src/db/: condition.py  database.py  file_handler.py  table.py
src/entities/: __init__.py  entity.py  player.py
src/interface/: __init__.py  abstract_frame.py  abstract_interface.py  abstract_screen.py  base_frame.py  character_creation.py  character_selection.py  combat.py  combat_interface.py  combat_screen.py  creation.py  exploration_screen.py  home_screen.py  interface.py  selection.py  storage_interface.py  storage_screen.py  user_creation.py  user_login.py  user_selection.py  world_creation.py  world_selection.py
src/stored/: __init__.py  stored.py  user.py  world.py
src/tools/: __init__.py  ability_names.py  constants.py  custom_exceptions.py  decision_tools.py  exceptions.py  (+6 more)
(+26 files in other folders)
