[project]
name = "gaia"
version = "1.0.0"
description = ""
authors = [
    {name = "georgeaustin-jp",email = "george.austin@challoners.org"}
]
readme = "README.md"
requires-python = "!=3.14.1,>=3.11"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "toml (>=0.10.2,<0.11.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "networkx (>=3.6.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false